src/dart/godot_dart/lib/src/core/gdextension_ffi_bindings.dart


abstract class GDExtensionClassMethodArgumentMetadata {
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_NONE = 0;
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_INT_IS_INT8 = 1;
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_INT_IS_INT16 = 2;
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_INT_IS_INT32 = 3;
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_INT_IS_INT64 = 4;
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_INT_IS_UINT8 = 5;
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_INT_IS_UINT16 = 6;
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_INT_IS_UINT32 = 7;
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_INT_IS_UINT64 = 8;
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_REAL_IS_FLOAT = 9;
  static const int GDEXTENSION_METHOD_ARGUMENT_METADATA_REAL_IS_DOUBLE = 10;
}

class GDExtensionClassMethodInfo extends ffi.Struct {
  external GDExtensionStringNamePtr name;

  external ffi.Pointer<ffi.Void> method_userdata;

  external GDExtensionClassMethodCall call_func;

  external GDExtensionClassMethodPtrCall ptrcall_func;

  @ffi.Uint32()
  external int method_flags;

  @GDExtensionBool()
  external int has_return_value;

  external ffi.Pointer<GDExtensionPropertyInfo> return_value_info;

  @ffi.Int32()
  external int return_value_metadata;

  @ffi.Uint32()
  external int argument_count;

  external ffi.Pointer<GDExtensionPropertyInfo> arguments_info;

  external ffi.Pointer<ffi.Int32> arguments_metadata;

  @ffi.Uint32()
  external int default_argument_count;

  external ffi.Pointer<GDExtensionVariantPtr> default_arguments;
}

typedef GDExtensionClassMethodCall = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            GDExtensionClassInstancePtr,
            ffi.Pointer<GDExtensionConstVariantPtr>,
            GDExtensionInt,
            GDExtensionVariantPtr,
            ffi.Pointer<GDExtensionCallError>)>>;
typedef GDExtensionInt = ffi.Int64;
typedef GDExtensionClassMethodPtrCall = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(ffi.Pointer<ffi.Void>, GDExtensionClassInstancePtr,
            ffi.Pointer<GDExtensionConstTypePtr>, GDExtensionTypePtr)>>;

class GDExtensionScriptInstanceInfo extends ffi.Struct {
  external GDExtensionScriptInstanceSet set_func;

  external GDExtensionScriptInstanceGet get_func;

  external GDExtensionScriptInstanceGetPropertyList get_property_list_func;

  external GDExtensionScriptInstanceFreePropertyList free_property_list_func;

  external GDExtensionScriptInstancePropertyCanRevert property_can_revert_func;

  external GDExtensionScriptInstancePropertyGetRevert property_get_revert_func;

  external GDExtensionScriptInstanceGetOwner get_owner_func;

  external GDExtensionScriptInstanceGetPropertyState get_property_state_func;

  external GDExtensionScriptInstanceGetMethodList get_method_list_func;

  external GDExtensionScriptInstanceFreeMethodList free_method_list_func;

  external GDExtensionScriptInstanceGetPropertyType get_property_type_func;

  external GDExtensionScriptInstanceHasMethod has_method_func;

  external GDExtensionScriptInstanceCall call_func;

  external GDExtensionScriptInstanceNotification notification_func;

  external GDExtensionScriptInstanceToString to_string_func;

  external GDExtensionScriptInstanceRefCountIncremented
      refcount_incremented_func;

  external GDExtensionScriptInstanceRefCountDecremented
      refcount_decremented_func;

  external GDExtensionScriptInstanceGetScript get_script_func;

  external GDExtensionScriptInstanceIsPlaceholder is_placeholder_func;

  external GDExtensionScriptInstanceSet set_fallback_func;

  external GDExtensionScriptInstanceGet get_fallback_func;

  external GDExtensionScriptInstanceGetLanguage get_language_func;

  external GDExtensionScriptInstanceFree free_func;
}

typedef GDExtensionScriptInstanceSet = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(GDExtensionScriptInstanceDataPtr,
            GDExtensionConstStringNamePtr, GDExtensionConstVariantPtr)>>;
typedef GDExtensionScriptInstanceDataPtr = ffi.Pointer<ffi.Void>;
typedef GDExtensionScriptInstanceGet = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(GDExtensionScriptInstanceDataPtr,
            GDExtensionConstStringNamePtr, GDExtensionVariantPtr)>>;
typedef GDExtensionScriptInstanceGetPropertyList = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Pointer<GDExtensionPropertyInfo> Function(
            GDExtensionScriptInstanceDataPtr, ffi.Pointer<ffi.Uint32>)>>;
typedef GDExtensionScriptInstanceFreePropertyList = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(GDExtensionScriptInstanceDataPtr,
            ffi.Pointer<GDExtensionPropertyInfo>)>>;
typedef GDExtensionScriptInstancePropertyCanRevert = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(
            GDExtensionScriptInstanceDataPtr, GDExtensionConstStringNamePtr)>>;
typedef GDExtensionScriptInstancePropertyGetRevert = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(GDExtensionScriptInstanceDataPtr,
            GDExtensionConstStringNamePtr, GDExtensionVariantPtr)>>;
typedef GDExtensionScriptInstanceGetOwner = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionObjectPtr Function(GDExtensionScriptInstanceDataPtr)>>;
typedef GDExtensionScriptInstanceGetPropertyState = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(GDExtensionScriptInstanceDataPtr,
            GDExtensionScriptInstancePropertyStateAdd, ffi.Pointer<ffi.Void>)>>;
typedef GDExtensionScriptInstancePropertyStateAdd = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(GDExtensionConstStringNamePtr,
            GDExtensionConstVariantPtr, ffi.Pointer<ffi.Void>)>>;
typedef GDExtensionScriptInstanceGetMethodList = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Pointer<GDExtensionMethodInfo> Function(
            GDExtensionScriptInstanceDataPtr, ffi.Pointer<ffi.Uint32>)>>;
typedef GDExtensionScriptInstanceFreeMethodList = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(GDExtensionScriptInstanceDataPtr,
            ffi.Pointer<GDExtensionMethodInfo>)>>;
typedef GDExtensionScriptInstanceGetPropertyType = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Int32 Function(GDExtensionScriptInstanceDataPtr,
            GDExtensionConstStringNamePtr, ffi.Pointer<GDExtensionBool>)>>;
typedef GDExtensionScriptInstanceHasMethod = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(
            GDExtensionScriptInstanceDataPtr, GDExtensionConstStringNamePtr)>>;
typedef GDExtensionScriptInstanceCall = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(
            GDExtensionScriptInstanceDataPtr,
            GDExtensionConstStringNamePtr,
            ffi.Pointer<GDExtensionConstVariantPtr>,
            GDExtensionInt,
            GDExtensionVariantPtr,
            ffi.Pointer<GDExtensionCallError>)>>;
typedef GDExtensionScriptInstanceNotification = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(GDExtensionScriptInstanceDataPtr, ffi.Int32)>>;
typedef GDExtensionScriptInstanceToString = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(GDExtensionScriptInstanceDataPtr,
            ffi.Pointer<GDExtensionBool>, GDExtensionStringPtr)>>;
typedef GDExtensionScriptInstanceRefCountIncremented = ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(GDExtensionScriptInstanceDataPtr)>>;
typedef GDExtensionScriptInstanceRefCountDecremented = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(GDExtensionScriptInstanceDataPtr)>>;
typedef GDExtensionScriptInstanceGetScript = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionObjectPtr Function(GDExtensionScriptInstanceDataPtr)>>;
typedef GDExtensionScriptInstanceIsPlaceholder = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionBool Function(GDExtensionScriptInstanceDataPtr)>>;
typedef GDExtensionScriptInstanceGetLanguage = ffi.Pointer<
    ffi.NativeFunction<
        GDExtensionScriptLanguagePtr Function(
            GDExtensionScriptInstanceDataPtr)>>;
typedef GDExtensionScriptLanguagePtr = ffi.Pointer<ffi.Void>;
typedef GDExtensionScriptInstanceFree = ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(GDExtensionScriptInstanceDataPtr)>>;

abstract class GDExtensionInitializationLevel {
  static const int GDEXTENSION_INITIALIZATION_CORE = 0;
  static const int GDEXTENSION_INITIALIZATION_SERVERS = 1;
  static const int GDEXTENSION_INITIALIZATION_SCENE = 2;
  static const int GDEXTENSION_INITIALIZATION_EDITOR = 3;
  static const int GDEXTENSION_MAX_INITIALIZATION_LEVEL = 4;
}

class GDExtensionInitialization extends ffi.Struct {
  @ffi.Int32()
  external int minimum_initialization_level;

  external ffi.Pointer<ffi.Void> userdata;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int32)>> initialize;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int32)>> deinitialize;
}

class GDExtensionGodotVersion extends ffi.Struct {
  @ffi.Uint32()
  external int major;

  @ffi.Uint32()
  external int minor;

  @ffi.Uint32()
  external int patch;

  external ffi.Pointer<ffi.Char> string;
}
